week2 - chamber fix color contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -5,8 +5,8 @@
     padding: 0;
 }
 :root {
-    --primary-color: #1a426d;
-    --secondary-color: #467291;
+    --primary-color: #6FA2DC;
+    --secondary-color: #495850;
     --font-color: #000000;    
     --accent-color: #281E15;
     --background-color: #f4f4f4;
